--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,21 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'Bebas Neue', cursive,Helvetica, sans-serif,-apple-system, BlinkMacSystemFont,'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #fff;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+:root{
+  --font-family: 'Bebas Neue', cursive,Helvetica, sans-serif;
+  --alt-color:#3a3f5e;
+  --main-font-color:#3a3f5e;
+  --main-bg-color:#fff;
+  --font-family2:'Josefin Slab', serif;
 }
